fix spacing for dash aside icons

--- a/css/inner/dashboard.less
+++ b/css/inner/dashboard.less
@@ -172,7 +172,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     display: inline-block;
-    width: 66%;
+    width: 60%;
     margin-right: -4px;
   }
   .tooltip {
@@ -196,7 +196,7 @@
     display: inline-block;
     vertical-align: top;
     text-align: right;
-    width: 34%;
+    width: 40%;
     height: 1.2em;
     position: relative;
     margin: .4em 0;
